--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -29,7 +29,7 @@ pytables=3.1.1=np19py27_2
 python=2.7.9=1
 python.app=1.2=py27_3
 pytz=2014.9=py27_0
-pyyaml=3.11=py27_0
+pyyaml=>4.2b1=py27_0
 pyzmq=14.5.0=py27_0
 qt=4.8.5=3
 readline=6.2=2
